fix: Mobile skill carousel no longer overflows.

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
@@ -25,6 +26,10 @@ body {
   color: var(--light-primary);
   font-family: var(--font-sans-serif);
   margin: 0;
+  overflow-x: hidden;
+}
+
+main {
   overflow-x: hidden;
 }
 
